--- a/name.html
+++ b/name.html
@@ -15,14 +15,14 @@ and open the template in the editor.
         <link href="http://mouzin.com/images/Webclip.png" rel="apple-touch-icon">
     </head>
     <body>
-        <div class='nav_bar'>
+        <nav class='nav_bar'>
             <div class="main_nav clearfix">
                 <div>
                     <a href='name.html'><img src='imgs/MOUZIN-9.png' class="home_img" alt=''></a>
                 </div>
                 <div>
                     <a href='#' class='nav_btns drop_btn1'>Sections</a>
-                    <div class='dropdown'>
+                    <div class='dropdown dropback1'>
                         <a href='#'>Farmers, Ranchers, Growers</a>
                         <a href='#'>Food Processing, Packaging</a>
                         <a href='#'>Equipment Suppliers</a>
@@ -49,10 +49,25 @@ and open the template in the editor.
             </div>
             <div class="side_nav">
                 <div>
-                    <a href='#' class='nav_btns'>PHolder</a> <!--hidbtn-->
-                </div>     
+                    <a href='#' class='side_btns'>Sign Up</a> 
+                </div>
+                <div>
+                    <a href='#' class='side_btns'>Cart</a> 
+                </div>
+                <div>
+                    <a href='#' class='side_btns'>Orders</a> 
+                </div>
+                <div>
+                    <a href='#' class='side_btns drop_btn1'>EN</a> 
+                    <div class='dropdown dropback2'>
+                        <a href='#'>Arabic</a>
+                        <a href='#'>English</a>
+                        <a href='#'>German</a>
+                    </div>
+                </div>
+                <!--hidbtn -->
             </div>
-        </div>
+        </nav>
         <div class="search_section">
             <form method="post" action="#" class="search_form">
                 <select id="selector">
@@ -64,6 +79,12 @@ and open the template in the editor.
                 <input type="text" name="search_bar" id="search_bar" placeholder="Search" required>
                 <input type="submit" id="submit" value="Search">
             </form>
+        </div>
+        <div class="hot_deals section">
+            <h2>HOT DEALS</h2>
+            <div class="img_slider">
+                <img src
+            </div>
         </div>
     </body>
 </html>
