--- a/name.html
+++ b/name.html
@@ -7,6 +7,8 @@ and open the template in the editor.
 <html>
     <head>
         <title>Home</title>
+        <script src="scripts/jquery-3.4.1.js"></script>
+        <script src="scripts/ctrl.js"></script>
         <link href="css/normalize.css" rel="stylesheet" type="text/css">
         <!--<link href="css/mouzin-responsive.css" rel="stylesheet" type="text/css">!-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,300i,400&display=swap" rel="stylesheet">
@@ -82,9 +84,17 @@ and open the template in the editor.
         </div>
         <div class="hot_deals section">
             <h2>HOT DEALS</h2>
-            <div class="img_slider">
-                <img src
+            <div class="img_slider_row slideloop">
+                <img class="img_row slid" src="imgs/centurion_pro_tabletop_rightbud_480x480.png" alt="PH5">
+                <img class="img_row slid" src="imgs/ultimate-drip-irrigation-kit-for-raised-bed-gardening-51712.jpg" alt="PH4">
+                <img class="img_row slid" src="imgs/E5-VandR-Series-Elevator.jpg" alt="PH3">
+                <img class="img_row slid" src="imgs/john_deere_3025e_1.jpeg" alt="PH2">
+                <img class="img_row slid" src="imgs/High-Pressure--Industrial-Homogenizer.png" alt="PH1">
+                <img class="img_row slid" src="imgs/21490753-farm-tractor-on-a-white-background.jpg" alt="PH6">
+                <img class="img_row slid" src="imgs/21490766-green-farm-tractor-on-a-white-background.jpg" alt="PH7">
+                <img class="img_row slid" src="imgs/4212281-0-15061791.jpg" alt="PH8">
             </div>
         </div>
-    </body>
+    </body>    
 </html>
+ 
